[project]
name = "sgs2"
version = "0.1.0"
description = "A pure Python interface for the Brazilian Central Bank's Time Series Management System (SGS) API"
authors = [
    {name = "Renan Moretto",email = "renan_moretto@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
